<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ahimsa-app</string>

    <string name="action_create_bulletin">Create Bulletin</string>
    <string name="action_sync_now">Sync Now</string>
    <string name="action_export_coin">Export Coin</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_source">Source</string>
    <string name="action_licenses">Licenses</string>

    <string name="create_bulletin">Create Bulletin</string>
    <string name="action_broadcast_bulletin">Broadcast Bulletin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_create_bulletin">CreateBulletinActivity</string>
    <string name="toast_insufficient_funds">WOMP.. insufficient coin!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="impport">Import</string>
    <string name="height_of_block">Height of Block</string>
    <string name="invalid_import_height">Invalid import height</string>





    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>



</resources>
