<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="io.ahimsa.ahimsa_app.ui.AhimsaActivity" >

    <item android:id="@+id/action_create_bulletin"
        android:icon="@drawable/ic_action_chat"
        android:title="@string/action_create_bulletin"
        android:orderInCategory="99"
        android:showAsAction="always"/>

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          android:showAsAction="never"
        />

    <item android:id="@+id/action_sync_now"
        android:title="@string/action_sync_now"
        android:orderInCategory="100"
        android:showAsAction="never"
        />

    <item android:id="@+id/action_export_coin"
          android:title="@string/action_export_coin"
          android:orderInCategory="100"
          android:showAsAction="never"
        />

    <item android:id="@+id/action_licenses"
          android:title="@string/action_licenses"
          android:orderInCategory="100"
          android:showAsAction="never"
        />

    <item android:id="@+id/action_source"
          android:title="@string/action_source"
          android:orderInCategory="100"
          android:showAsAction="never"
        />

    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:orderInCategory="100"
          android:showAsAction="never"
        />
</menu>
